--- a/_source/_less/_typography.less
+++ b/_source/_less/_typography.less
@@ -197,7 +197,7 @@ body {
     position: relative;
     &--number:before {
         counter-increment: section;
-        content: counter(section, lower-roman) + "."; 
+        content: counter(section); 
         #type > #font > .serif;
         position: absolute;
         width: unit(41/@base,rem);
