--- a/_source/_less/roodesign.less
+++ b/_source/_less/roodesign.less
@@ -18,6 +18,7 @@
 @import 'components/frame';
 @import 'components/screenshots';
 @import 'components/prevNext';
+@import 'components/boxout';
 
 //modules
 @import 'modules/navigation';
