updated homepage button

--- a/_source/index.njk
+++ b/_source/index.njk
@@ -15,7 +15,7 @@ I help people unleash their creative potential. But I don't rely on unlikely "eu
 <div class="grid grid--showcase">
   <article id="introduction">
     {{ c.prose(introduction) }}
-    {{ c.button('Read case studies','/case-studies',classes=['space--margin-top-1']) }}
+    {{ c.button('See my work','/work',classes=['space--margin-top-1']) }}
   </article>
   {{ c.image(url=hero.url,classes=['homepage-hero']) }}
 </div>
