--- a/_source/_layouts/article.njk
+++ b/_source/_layouts/article.njk
@@ -29,7 +29,7 @@
       <dt class="meta__title">Author</dt>
       <dd class="meta__value space--pico">Jon Roobottom</dd>
     </dl>
-    {{ c.prose(content,['prose--article']) }}
+    {{ c.prose(content,['article']) }}
   </div>
   <div class="grid grid--prose space--margin-top-1">
     <nav class="prevNext separator space--padding-top-1" aria-label="Pagination" role="navigation">
