--- a/_source/index.njk
+++ b/_source/index.njk
@@ -9,7 +9,7 @@ hero:
 {% set introduction %}
 Good ideas transform businesses. Yet, many regard creativity as the preserve of artists and designers. I believe that anyone is capable of exceptional ideas — regardless of who they are or what they do.
 
-I help people unleash their creative potential. But I don't rely on unlikely "eureka" moments. Instead,  I teach a systematic approach to creative thinking. Great ideas are simply an inevitable outcome of the process.
+I help people unleash their creative potential. But I don't rely on unlikely "eureka" moments. Instead, I use a systematic approach to creative thinking. Great ideas are simply an inevitable outcome of the process.
 {% endset %}
 
 <div class="grid grid--showcase">
