--- a/_source/design-system/styles/colours.njk
+++ b/_source/design-system/styles/colours.njk
@@ -1,3 +1,21 @@
+---js
+{
+  title: 'Colours',
+  colourSets: [
+    {
+      title: 'Core colours',
+      colours: [
+        {
+          title: 'Green',
+          hex: '#71CBAF',
+          var: '@c_green'
+        }
+      ]
+    }
+  ]
+}
 ---
-title: Colours
----
+{% import "./../../_includes/components.njk" as c %}
+<div class="ds-colours">
+  
+</div>
