--- a/_source/_less/roodesign.less
+++ b/_source/_less/roodesign.less
@@ -26,6 +26,9 @@
 @import 'modules/footer';
 @import 'modules/card';
 
+//design system
+@import 'ds';
+
 //move this?
 .break-min(@rule) {
   @media screen and (min-width: (@break-min-rem) ) {
