--- a/_source/design-system/styles/colours.njk
+++ b/_source/design-system/styles/colours.njk
@@ -2,6 +2,7 @@
 {
   title: 'Colours',
   colourSets: [
+    
     {
       title: 'Core colours',
       colours: [
@@ -9,22 +10,85 @@
           name: 'Green',
           hex: '#71CBAF',
           var: '@c_green'
+        },
+        {
+          name: 'Blue',
+          hex: '#004ADB',
+          var: '@c_blue'
+        },
+        {
+          name: 'Red',
+          hex: '#E97055',
+          var: '@c_red'
+        },
+        {
+          name: 'Yellow',
+          hex: '#EDBB4A',
+          var: '@c_yellow'
+        },
+        {
+          name: 'Purple',
+          hex: '#9013FE',
+          var: '@c_purple'
+        }
+      ]
+    },
+
+    {
+      title: 'Tints',
+      colours: [
+        {
+          name: 'Light green',
+          hex: '#F0FAF7',
+          var: '@c_green_light'
+        },
+        {
+          name: 'Light blue',
+          hex: '#D7E2F9',
+          var: '@c_blue_light'
+        },
+        {
+          name: 'Light red',
+          hex: '#F6DFDA',
+          var: '@c_red_light'
+        },
+        {
+          name: 'Light yellow',
+          hex: '#FFEFCB',
+          var: '@c_yellow_light'
+        },
+        {
+          name: 'Light purple',
+          hex: '#FAF3FF',
+          var: '@c_purple_light'
         }
       ]
     }
+
+
   ]
 }
 ---
 {% import "./../../_includes/components.njk" as c %}
 {% for colourSet in colourSets %}
-  <h2>{{ colourSet.title }}</h2>
-  <div class="ds-colourSet">
+  <div class="prose prose--article">
+    <h2>{{ colourSet.title }}</h2>
+  </div>
+  <div class="ds-colourSet space--tall">
   {% for colour in colourSet.colours %}
-    <div class="ds-colour" style="background-color: {{ colour.hex }}">
+    <div class="ds-colour" style="background-color: {{ colour.hex }}; border-color: {{ colour.hex }};">
       <dl class="ds-colour__data">
         <div class="ds-colour__data-item">
           <dt>Name</dt>
           <dd>{{ colour.name }}</dd>
+        </div>
+        <div class="ds-colour__data-item">
+          <dt>Hex</dt>
+          <dd><code>{{ colour.hex }}</code></dd>
+        </div>
+        <div class="ds-colour__data-item">
+          <dt>Var</dt>
+          <dd><code>{{ colour.var }}</code></dd>
         </div>
       </dl>
     </div>
