--- a/_source/_less/components/figure.less
+++ b/_source/_less/components/figure.less
@@ -1,6 +1,7 @@
 #figure() {
   .default {
     //default settings
+    display: inline-block;
     img {
         display: block;
         max-width: 100%;
@@ -30,7 +31,7 @@
   
   &__images {
       display: flex;
-      justify-content: center;
+      //justify-content: center;
       flex-flow: row;
       align-items: center;
   }
