--- a/_source/_less/ds.less
+++ b/_source/_less/ds.less
@@ -39,4 +39,25 @@
 
   }
 
+  //example
+
+  &-example {
+    border: 1px solid @c_grey_x-dark;
+    margin-left: -1 * @gap-rem;
+    margin-bottom: 2* @gap-rem;
+
+    &__showcase {
+      padding: @gap-rem;
+    }
+
+    &__code {
+      font-family: 'Fira Code', monospace;
+      font-size: 1rem;
+      padding: @gap-rem;
+      background-color: @c_grey_light;
+      overflow-x: auto;
+      border-top: 1px solid @c_grey_x-dark;
+    }
+  }
+
 } 
