--- a/_source/_less/modules/subnav.less
+++ b/_source/_less/modules/subnav.less
@@ -4,7 +4,7 @@
 
   &__list {
     list-style: none;
-    margin-left: unit(@gap * .75/@base,rem);
+    margin-left: unit(@gap/@base,rem);
   }
 
   &__item {
