--- a/_source/design-system/styles/typography.njk
+++ b/_source/design-system/styles/typography.njk
@@ -15,7 +15,23 @@ For the main headings, I use [Young Serif by Noir Blanc Rouge](https://noirblanc
 
 {% set headings %}
 ## Headings
+There are three heading styles used globally. These are generally marked-up as `<h1>`, `<h2>` and `<h3>`. Headings further down the pecking order inherit from the global text style. 
+{% endset %}
+{% set headingsEg %}
+<h1>Heading level 1</h1>
+<h2>Heading level 2</h2>
+<h3>Heading level 3</h3>
+{% endset %}
+{% set overideHeadings %}
+### Overriding headings
+Sometimes I need to use the correct `h#` to maintain semantic meaning but make the heading visually smaller or larger. I can do this with override heading classes.
+{% endset%}
+{% set overideHeadingsEg %}
+<h3 class="h1">Heading level 3 that looks like level 1</h3>
 {% endset %}
 <section class="space--tall">
   {{ c.prose(headings,['article'])}}
+  {{ c.dsExample(headingsEg) }}
+  {{ c.prose(overideHeadings,['article'])}}
+  {{ c.dsExample(overideHeadingsEg) }}
 </section>
