--- a/_source/_less/_settings.less
+++ b/_source/_less/_settings.less
@@ -24,7 +24,7 @@
 
 //colours
 @c_grey_light: #EFEFEF;
-@c_grey_med: #737373;
+@c_grey_med: #cfcfcf;
 @c_grey_dark: #505050;
 @c_grey_x-dark: #222;
 
