--- a/_source/design-system/brand/colours.njk
+++ b/_source/design-system/brand/colours.njk
@@ -1,6 +1,7 @@
 ---js
 {
   title: 'Colours',
+  order: 2,
   colourSets: [
     
     {
@@ -75,7 +76,7 @@
         },
         {
           name: 'Medium grey',
-          hex: '#737373',
+          hex: '#CFCFCF',
           var: '@c_grey_med'
         },
         {
