--- a/_source/design-system/brand/logo.njk
+++ b/_source/design-system/brand/logo.njk
@@ -1,5 +1,6 @@
 ---
 title: Logo
+order: 1
 ---
 {% import "./../../_includes/components.njk" as c %}
 {% set content %}
@@ -8,7 +9,7 @@ The Roodesign logo is a variant of the emblem I use on my [personal site](//roob
 ## The roo
 The primary logo or "roo" is the main figurehead of the site. Usually, it's rendered in yellow but can you can display it in any of the core colours.
 
-![The Roodesign logo: The Roo, shown in all possible colours.](/assets/images/design-system/logo-roo.svg) {.space--tall}
+![The Roodesign logo: The Roo, shown in all possible colours.](/assets/images/design-system/logo-roo.svg)
 
 ## The mini roo
 I use the secondary logo, or "mini roo", to embellish a section break, most notably on the site footer. You can use it in solid or outline.
