--- a/_source/_less/_typography.less
+++ b/_source/_less/_typography.less
@@ -242,7 +242,7 @@ code {
 .prose {
 
     //sizing
-    p, ol, ul, h4, h5, h6 {
+    p, ol, ul, h4, h5, h6, th, td {
         #type > #size > .regular;
     }
     .lead,
@@ -298,7 +298,7 @@ code {
         margin-top: unit(@gap*2/@base,rem);
         margin-top: calc(var(--gap) * 2);
     }
-    figure {
+    figure, table {
       margin-bottom: unit(@gap*2/@base,rem);
       margin-bottom: calc(var(--gap) * 2);
     }
@@ -341,13 +341,14 @@ code {
     }
 
     thead tr {
-        border-bottom: 1px solid;
+        background-color: @c_grey_light;
+        box-shadow: inset 0 -1px 0 white;
     }
 
     td, th {
-        padding: 0.5em;
-        line-height: 1;
+        padding: 1em;
         vertical-align: top;
+        border-bottom: 1px solid @c_grey_med;
     }
 
     th {
@@ -361,16 +362,19 @@ code {
     //code
 
     p>code,
-    li>code {
+    li>code,
+    td>code,
+    th>code {
         padding: 0 unit(3/@base,rem);
-        margin: 0 unit(-3/@base,rem);
     }
 
 
     p>code,
     li>code,
+    td>code,
+    th>code,
     pre { 
-        background-color: fade(black,5%);
+        background-color: @c_grey_light;
         border-radius: unit(6/@base,rem);
         border: 1px solid fade(black,7%);
     }
@@ -449,7 +453,7 @@ code {
 
         > p, > ol, > ul,
         h1, h2, h3, h4, h5, h6,
-        blockquote, hr, .footnotes, .gallery, pre {
+        blockquote, hr, .footnotes, .gallery, pre, table {
           grid-column: 1 / span 5;
         }
       });
