--- a/_source/_less/components/figure.less
+++ b/_source/_less/components/figure.less
@@ -8,7 +8,7 @@
     }
     figcaption {
         #type > #size > .small;
-        &, a { color: @c_grey_med; }
+        &, a { color: @c_grey_dark; }
         margin-top: unit(12/@base,rem);
         max-width: unit(561/@base,rem); 
     }
