--- a/_source/_less/layout/grid.less
+++ b/_source/_less/layout/grid.less
@@ -140,6 +140,15 @@
                 grid-column: 3 / span 6;
             }
         }
+
+        .grid--thin-fat-split {
+            >*:nth-child(2n-1) {
+                grid-column: 1 / span 2;
+            }
+            >*:nth-child(2n) {
+                grid-column: 4 / span 5;
+            }
+        }
         
 
         .grid--showcase {
@@ -212,6 +221,15 @@
             }
             >*:nth-child(2n) {
                 grid-column: 3 / span 6;
+            }
+        }
+
+        .grid--thin-fat-split {
+            >*:nth-child(2n-1) {
+                grid-column: 2 / span 2;
+            }
+            >*:nth-child(2n) {
+                grid-column: 4 / span 5;
             }
         }
 
