--- a/_source/_less/roodesign.less
+++ b/_source/_less/roodesign.less
@@ -19,12 +19,12 @@
 @import 'components/screenshots';
 @import 'components/prevNext';
 @import 'components/boxout';
+@import 'components/card';
 
 //modules
 @import 'modules/navigation';
 @import 'modules/subnav';
 @import 'modules/footer';
-@import 'modules/card';
 
 //design system
 @import 'ds';
